Actions
Bug #13951
closednscd: `cache hit rate' values are misaligned
Start date:
2021-07-16
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
$ nscd -g
STATISTICS: positive hits: 0 negative hits: 0 positive misses: 0 negative misses: 0 total entries: 0 queries queued: 0 queries dropped: 0 cache invalidations: 0 cache hit rate: 0.0
Value of cache hit rate should be aligned to left.
Updated by Sachidananda Urs 10 months ago
- Status changed from New to Pending RTI
- % Done changed from 0 to 100
Updated by Sachidananda Urs 10 months ago
- Subject changed from ncsd: `cache hit rate' values are misaligned to nscd: `cache hit rate' values are misaligned
Updated by Electric Monk 10 months ago
- Status changed from Pending RTI to Closed
git commit 9e7f7d5d77f695e9980dbb0f9fb1b969272eb207
commit 9e7f7d5d77f695e9980dbb0f9fb1b969272eb207 Author: Sachidananda Urs <sacchi@gmail.com> Date: 2021-08-06T23:08:07.000Z 13951 nscd: `cache hit rate' values are misaligned Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions